# CmdLanguageModel

./: .gitignore  .gitmodules  LICENSE  README.md  setup.sh
docs/: pytorch-to-gguf.md
llm/: denselogic-arch.patch  logicsim_v2-arch.patch
llm/export/: convert_to_gguf.py  tokenizer_spec.json
llm/models/: bash-v2.vocab.txt  nanogpt-bash.vocab.txt
llm/runner/: CMakeLists.txt  qq-llm.cpp
terminal/: install.sh  qq.zsh
